--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             successful in creating a global network of a highly adept intelligent workspace that can help your company achieve 
             their mission-critical projects and goals 
         </p> 
-        <div class="buttons">  <a href="/Landing.html">  <button class="New"> I'm new to the industry</button></a> </a>
+        <div class="buttons">  <a href="/landing.html">  <button class="New"> I'm new to the industry</button></a> </a>
            <a href="https://www.google.com/">  <button class="Need"> I need industry experience</button></a></div>
         
         </div>
